# dhallix

./: dhallix.cabal
exe/: Main.hs
src/: Dhallix.hs
