Name: dhallix
Version: 0.1.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.8.0.0 && < 5   ,
        containers                              < 0.6 ,
        data-fix                                < 0.3 ,
        dhall                     >= 1.15    && < 1.18,
        hnix                      >= 0.5     && < 0.6 ,
        insert-ordered-containers >= 0.1.0.1 && < 0.3 ,
        neat-interpolation                      < 0.4 ,
        text                      >= 0.8.0.0 && < 1.3
    Exposed-Modules:
        Dhallix
    GHC-Options: -Wall -O2

Executable dhallix
    Hs-Source-Dirs: exe
    Main-Is: Main.hs
    Build-Depends:
        base                                ,
        dhall                               ,
        dhallix                             ,
        hnix                                ,
        lens-family-core,
        optparse-generic >= 1.1.1   && < 1.4,
        text,
        transformers
    GHC-Options: -Wall -O2
